# lx32

./: .gitignore  Makefile  README.md  lx32-bom.csv  program.hex  reg1.sv  reg1_tb.sv  reg2.sv  reg2_tb.sv
.github/: CODEOWNERS
cad/: Assembly.STEP-Shape.step  (+1 more)
tools/lx32_backend/: .clangd  CMakeLists.txt
tools/lx32_backend/AsmParser/: CMakeLists.txt  LX32AsmParser.cpp
tools/lx32_backend/MCTargetDesc/: CMakeLists.txt  LX32AsmBackend.cpp  LX32ELFObjectWriter.cpp  LX32MCCodeEmitter.cpp  LX32MCTargetDesc.cpp
tools/lx32_backend/TableGen/: LX32.td  LX32CallingConv.td  LX32GenCallingConv.inc  LX32GenDAGISel.inc  LX32GenInstrInfo.inc  LX32GenRegisterInfo.inc  LX32GenRegisterInfoEnums.inc  LX32GenRegisterInfoHeader.inc  LX32GenRegisterInfoMCDesc.inc  LX32GenRegisterInfoTargetDesc.inc  LX32GenSubtargetInfo.inc  LX32InstrFormats.td  LX32InstrInfo.td  LX32RegisterInfo.td  compile_td.sh
tools/lx32_backend/core/: CMakeLists.txt  LX32AsmPrinter.cpp  LX32FrameLowering.cpp  LX32FrameLowering.h  LX32ISelDAGToDAG.cpp  LX32ISelLowering.cpp  LX32ISelLowering.h  LX32InstrInfo.cpp  LX32InstrInfo.h  LX32RegisterInfo.cpp  LX32RegisterInfo.h  LX32Subtarget.cpp  LX32Subtarget.h  LX32TargetMachine.cpp  LX32TargetMachine.h
tools/lx32_backend/mc/: CMakeLists.txt  LX32MCAsmInfo.cpp  LX32MCAsmInfo.h  LX32MCTargetDesc.cpp  LX32MCTargetDesc.h
tools/lx32_backend/tests/: README.md  compile_baremetal_c.sh  run_smoke.sh
tools/lx32_backend/tests/baremetal/: README.md  crt0.S  crt0.S.bak  link.ld  run_baremetal_smoke.sh
tools/lx32_backend/tests/smoke/: add.ll  bigconst.ll  call.ll  ret0.ll
(+134 files in other folders)
